testdata/baselines/reference/compiler/unicodeSpellingSuggestions.errors.txt
unicodeSpellingSuggestions.tlua(3,1): error TS1434: Unexpected keyword or identifier.
unicodeSpellingSuggestions.tlua(3,1): error TS2304: Cannot find name 'classAé'.
unicodeSpellingSuggestions.tlua(6,1): error TS1434: Unexpected keyword or identifier.
unicodeSpellingSuggestions.tlua(6,1): error TS2304: Cannot find name 'classAéé'.
unicodeSpellingSuggestions.tlua(9,1): error TS1434: Unexpected keyword or identifier.
unicodeSpellingSuggestions.tlua(9,1): error TS2304: Cannot find name 'classAééé'.


==== unicodeSpellingSuggestions.tlua (6 errors) ====
    // https://github.com/microsoft/typescript-go/issues/4223
    
    classAé {
    ~~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~~~~
!!! error TS2304: Cannot find name 'classAé'.
    }
    
    classAéé {
    ~~~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~~~~~
!!! error TS2304: Cannot find name 'classAéé'.
    }
    
    classAééé {
    ~~~~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'classAééé'.
    }
    